src/main/java/com/example/Rental/Errors/UserNotFoundException.java
package com.example.Rental.Errors;

public class UserNotFoundException extends RuntimeException {
    public UserNotFoundException(Long userId) {
        super("User not found: " + userId);
    }
}
